# MeteoIO-2.4.2_patched

./: CMakeLists.txt  meteoio.lsm
doc/examples/: 2D_interpolations.cc  CMakeLists.txt  dem_reading.cc  grid2d_reading.cc  io.ini  readme.txt
meteoio/: Array1D.h  Array2D.h  Array3D.h  Array4D.h  BufferedIOHandler.cc  BufferedIOHandler.h  CMakeLists.txt  Config.cc  Config.h  Coords.cc  Coords.h  DEMObject.cc  DEMObject.h  DataGenerator.cc  DataGenerator.h  Date.cc  Date.h  FileUtils.cc  FileUtils.h  FilterProperties.h  GeneratorAlgorithms.cc  GeneratorAlgorithms.h  Graphics.cc  Graphics.h  Grid2DObject.cc  Grid2DObject.h  Grid3DObject.cc  Grid3DObject.h  IOExceptions.cc  IOExceptions.h  IOHandler.cmake.cc  IOHandler.h  IOHandler.ph  IOInterface.cc  IOInterface.h  IOManager.cc  IOManager.h  IOManager.ph  IOPlugin.cc  IOPlugin.h  (+28 more)
meteoio/jnative/: DEMLoader.cc  DEMLoader.h  ch_slf_gin_jnative_MeteoIOJNIInterface.cc  jnative.cc  synchronized.h
meteoio/meteofilters/: CMakeLists.txt  FilterBlock.cc  FilterBlock.h  FilterMAD.cc  FilterMAD.h  FilterMax.cc  FilterMax.h  FilterMeanAvg.cc  FilterMeanAvg.h  FilterMedianAvg.cc  FilterMedianAvg.h  FilterMin.cc  FilterMin.h  FilterMinMax.cc  FilterMinMax.h  FilterRate.cc  FilterRate.h  FilterStdDev.cc  FilterStdDev.h  FilterSuppr.cc  FilterSuppr.h  FilterTukey.cc  FilterTukey.h  FilterUnheatedHNW.cc  FilterUnheatedHNW.h  FilterWindAvg.cc  FilterWindAvg.h  ProcAdd.cc  ProcAdd.h  ProcButterworth.cc  ProcButterworth.h  ProcExpSmoothing.cc  ProcExpSmoothing.h  ProcHNWDistribute.cc  ProcHNWDistribute.h  ProcMult.cc  ProcMult.h  ProcUndercatch_Forland.cc  ProcUndercatch_Forland.h  ProcUndercatch_Hamon.cc  (+17 more)
meteoio/meteolaws/: Atmosphere.cc  Atmosphere.h  CMakeLists.txt  Meteoconst.h  Sun.cc  Sun.h  Suntrajectory.cc  Suntrajectory.h
meteoio/meteostats/: CMakeLists.txt  libfit1D.cc  libfit1D.h  libfit1DCore.cc  libfit1DCore.h  libinterpol1D.cc  libinterpol2D.cc  libinterpol2D.h
meteoio/plugins/: A3DIO.cc  A3DIO.h  ARCIO.cc  ARCIO.h  ARPSIO.cc  ARPSIO.h  BormaIO.cc  BormaIO.h  CMakeLists.txt  CosmoXMLIO.cc  CosmoXMLIO.h  GRIBIO.cc  GRIBIO.h  GSNIO.cc  GSNIO.h  GeotopIO.cc  GeotopIO.h  GrassIO.cc  GrassIO.h  ImisIO.cc  ImisIO.h  NetCDFIO.cc  NetCDFIO.h  PGMIO.cc  PGMIO.h  PNGIO.cc  PSQLIO.cc  PSQLIO.h  SMETIO.cc  SMETIO.h  SNIO.cc  SNIO.h  libncpp.cc  libncpp.h  libsmet.cc  libsmet.h  template.cc
tests/: io.ini  time.cc
tests/2D_interpolations/: 2009-01-19T12.00_HNW_ref.asc  2009-01-19T12.00_VW_ref.asc  2D_interpolations.cc
tests/arrays/: arrays.cc
tests/coords/: coordinates.cc
tests/dem_reading/: dem_reading.cc  ref_AZI.asc  ref_DEM.asc  ref_SLOPE.asc
tests/meteo_reading_interpol/: meteo_reading.cc
tests/meteo_reading_no_interpol/: meteo_reading.cc
tests/stats/: stats.cc
tests/sun/: ref_output.txt
tools/: smet2agr.sh  smet_extract.sh
tools/cmake/: BuildVersion.cmake  FindMeteoIO.cmake
